[package]
name = "discord_api"
version = "0.1.0"
edition = "2021"

[features]
default = []
with_process_lib = []

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0.0"
url = "2.4.1"

kinode_process_lib = { git = "https://github.com/uqbar-dao/process_lib.git", tag = "v0.5.4-alpha" }
